--- a/index.html
+++ b/index.html
@@ -1,32 +1,121 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Responsive Design</title>
     <!-- <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> -->
-    <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&family=Inter:wght@300;500&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="./style.css">
-</head>
-<body>
+    <link
+      href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&family=Inter:wght@300;500&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="./style.css" />
+  </head>
+  <body>
     <header>
-        <img src="./assets/img/logo.svg" alt="Logo Principal del proyecto">
-        <div class="header--title-container">
-            <h1>La próxima revolución en el intercambio de criptomonedas.</h1>
-            <p>Batabit te ayuda a navegar entre los diferentes precios y tendencias.</p>
-            <a class="header--button" href="#">Conoce Nuestros Planes <span></span></a>
-        </div>
+      <img src="./assets/img/logo.svg" alt="Logo Principal del proyecto" />
+      <div class="header--title-container">
+        <h1>La próxima revolución en el intercambio de criptomonedas.</h1>
+        <p>
+          Batabit te ayuda a navegar entre los diferentes precios y tendencias.
+        </p>
+        <a class="header--button" href="#"
+          >Conoce Nuestros Planes <span></span
+        ></a>
+      </div>
     </header>
     <main>
-        <section></section>
-        <section></section>
-        <section></section>
-        <section></section>
+      <section class="main-exchange-container">
+        <figure class="backgroundImg">
+          <img src="./assets/img/Bitcoin.svg" alt="" />
+        </figure>
+        <div class="main-exchange-container--title">
+          <h2>Visibilizamos todas las tasas de cambio.</h2>
+          <p>
+            Traemos información en tiempo real de las casas de cambio y las
+            monedas más importantes del mundo.
+          </p>
+        </div>
+        <section class="main-tables-container">
+          <div class="main-currency-table">
+            <p class="currency-table--title title-color-monedas">Monedas</p>
+            <div class="currency-table--container">
+              <table>
+                <tr>
+                  <td class="table__top-left">Bitcoin</td>
+                  <td class="table__top-right table__right">
+                    $ 1.96<span class="down"></span>
+                  </td>
+                </tr>
+                <tr>
+                  <td>Ethereum</td>
+                  <td class="table__right">$ 0.07 <span class="up"></span></td>
+                </tr>
+                <tr>
+                  <td>Ripple</td>
+                  <td class="table__right">$ 2.15<span class="down"></span></td>
+                </tr>
+                <tr>
+                  <td class="table__bottom-left">Stellar</td>
+                  <td class="table__bottom-right table__right">
+                    $ 4.96 <span class="down"></span>
+                  </td>
+                </tr>
+              </table>
+            </div>
+            <div class="currency-table--date background_color--monedas">
+              <p><b> Actualizado:</b> 29 de Mayo 15:42</p>
+            </div>
+          </div>
+        </section>
+        <section class="main-tables-container">
+          <div class="main-currency-table">
+            <p class="currency-table--title title-color-corredoras">Corredoras</p>
+              <div class="currency-table--container">
+                <table>
+                  <tr>
+                    <td class="table__top-left">Bitrade</td>
+                    <td class="table__top-right table__right">$ 12.96</td>
+                  </tr>           
+                  <tr>
+                    <td>Bitpreco</td>
+                    <td class="table__right">$ 13.07</td>
+                  </tr>
+                  <tr>
+                    <td>Novadax</td>
+                    <td class="table__right">$ 13.15</td>
+                  </tr>
+                  <tr>
+                    <td class="table__bottom-left">Coinext</td>
+                    <td class="table__bottom-right table__right">$ 14.96</td>
+                  </tr>
+                </table>
+              </div>
+              <div class="currency-table--date background_color--corredoras">
+                <p><b> Actualizado:</b> 30 de Mayo 13:37</p>
+              </div>
+          </div>
+        </section>
+      </section>
+      <section class="main-product-detail">
+        <span></span>
+        <div class="product-detail--title">
+          <h2>Creamos un producto sin comparación.</h2>
+          <p>Confiable y diseñado para su uso diario.</p>
+        </div>
+        <section class="product-cards--container">
+          <article class="product-detail--card">
+            <span class="clock"></span>
+            <p class="product--card-title">Tiempo real</p>
+            <p class="product--card-body">Nuestro API toma información minuto a minuto sobre las tasas que más determinan el comportamiento.</p>
+          </article>
+        </section>
+      </section>
+      <section></section>
+      <section></section>
     </main>
-    <footer>
-
-    </footer>
-</body>
+    <footer></footer>
+  </body>
 </html>
