--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <p>
           Batabit te ayuda a navegar entre los diferentes precios y tendencias.
         </p>
-        <a class="header--button" href="#"
+        <a class="header--button" href="#plans"
           >Conoce Nuestros Planes <span></span
         ></a>
       </div>
@@ -133,7 +133,23 @@
           Conócelo hoy.
         </h2>
       </section>
-      <section></section>
+      <section id="plans" class="main-plans-container">
+        <div class="plans--title">
+          <h3>Escoge el plan que mejor se ajuste a ti.</h3>
+          <p>Cualquier plan te da acceso completo a nuestra plataforma.</p>
+        </div>
+        <section class="plans-container--slider">
+          <article class="plans-container--card">
+            <p>Recomendado</p>
+            <div>
+              <h3>Pago Anual</h3>
+              <p><span>$</span> 99</p>
+              <p>*Ahorras $129 comparado al plan mensual.</p>
+              <button>Escager este <span>a</span></button>
+            </div>
+          </article>
+        </section>
+      </section>
     </main>
     <footer></footer>
   </body>
